# automakeosufile

./: .gitignore  IMPROVEMENTS_SUMMARY.md  PROJECT_CLEANUP_PLAN.md  README.md  YELL!_test.osu  chatgpt_generate_function.py  main.py  main_old.py  mp3_to_wav.py  osu_file_make.py  pyproject.toml  requirements.txt  run.py  stft_plotly.py  test_new_algorithm.py
.clinerules/: CONSTRAINTS.md  FolderStructure.md
algorithm/: __init__.py  audio_processing.py  auto_optimization.py  beatmap_generator.py  binarize.py  bpm_calculate.py  calculate_windows_size.py  config.py  custom_onset_detect.py  custom_stft.py  dynamic_spectrum.py  evolutionary_optimizer.py  feature_extraction.py  main.py  nmf_separator.py  note_duration.py  optimizer.py  osu_file_parse.py  osu_parser.py  pipeline.py  utils.py
alignment/: __init__.py  offset_aligner.py
archive/: README.md  README.txt  analyze_unused_files.py  cleanup_plan.md  main_old_experimental.py  project_analysis_report.md  revised_cleanup_plan.md  test_cleaned_project.py  test_optimization.py
automakeosufile/: __init__.py  api.py  audio_processing.py  beatmap_generator.py  config.py  feature_extraction.py  main.py  output_paths.py
docs/: 20260406分析.md  20260406增量改动日志.md  20260406当前代码分析.md  20260406训练实现计划.md  20260406项目整理说明.md  Create Osu! Beatmap from MP3.md  automakeosufile.canvas  export_outputcode_utf8.ps1  outputcode.md  parameter_optimization_summary.md  下落式6k音游谱面难度计算公式的推导.md  基于统计的节奏大师歌曲难度计算.canvas  音游理论概述.md  项目文件分析.md  项目清理最终报告.md
fileprocess/: README.md  mp3_to_wav.py  osu_file_make.py  osu_file_parse.py  readmp3.py
(+53 files in other folders)
